generator client {
  provider      = "prisma-client-js"
  // native: máy dev (macOS/linux). musl openssl-3.0.x: image alpine (cả arm64 lẫn x64) cho Docker.
  binaryTargets = ["native", "linux-musl-arm64-openssl-3.0.x", "linux-musl-openssl-3.0.x"]
}

generator dbml {
  provider = "prisma-dbml-generator"
}

datasource db {
  provider = "postgresql"
  url      = env("DATABASE_URL")
}

model User {
  id                        String    @id @default(uuid())
  email                     String    @unique
  googleId                  String?
  password                  String?
  phone                     String?
  address                   String?
  avatar                    String?
  name                      String
  date_of_birth             DateTime?
  country                   String?
  createAt                  DateTime  @default(now())
  updateAt                  DateTime? @updatedAt
  roleId                    String?
  verificationCode          String?
  verificationCodeExpiresAt DateTime?
  isVerified                Boolean   @default(false)
  role                      Role?     @relation(fields: [roleId], references: [id])

  // Chống brute-force: đếm số lần đăng nhập sai liên tiếp & khoá tạm thời
  failedLoginAttempts Int       @default(0)
  lockedUntil         DateTime?

  // Reset password (token được hash trước khi lưu, kèm thời hạn dùng 1 lần)
  resetToken          String?
  resetTokenExpiresAt DateTime?

  // Message relations
  sentMessages     Message[] @relation("SentMessages")
  receivedMessages Message[] @relation("ReceivedMessages")

  // Refresh token sessions (rotation + revoke)
  refreshTokens RefreshToken[]

  // Index cho tra cứu token (resetPassword query findFirst theo resetToken)
  @@index([resetToken])
  @@index([roleId])
  @@map("users")
}

model RefreshToken {
  id        String   @id @default(uuid())
  // Lưu hash của refresh token, không lưu token thô
  tokenHash String   @unique
  userId    String
  user      User     @relation(fields: [userId], references: [id], onDelete: Cascade)
  expiresAt DateTime
  revoked   Boolean  @default(false)
  createdAt DateTime @default(now())

  @@index([userId])
  @@map("refresh_tokens")
}

model Role {
  id    String @id @default(uuid())
  name  String @unique
  users User[]

  @@map("roles")
}

model Message {
  id        String   @id @default(uuid())
  content   String
  createdAt DateTime @default(now())
  updatedAt DateTime @updatedAt

  // Relations
  senderId   String
  sender     User   @relation("SentMessages", fields: [senderId], references: [id])
  receiverId String
  receiver   User   @relation("ReceivedMessages", fields: [receiverId], references: [id])

  // Optional fields for message status
  isRead Boolean   @default(false)
  readAt DateTime?

  // Index cho truy vấn hội thoại & đếm tin chưa đọc (tránh sequential scan)
  @@index([senderId])
  @@index([receiverId])
  @@index([receiverId, isRead])
  @@map("messages")
}
