//// ------------------------------------------------------
//// THIS FILE WAS AUTOMATICALLY GENERATED (DO NOT MODIFY)
//// ------------------------------------------------------

Table users {
  id String [pk]
  email String [unique, not null]
  googleId String
  password String
  phone String
  address String
  avatar String
  name String [not null]
  date_of_birth DateTime
  country String
  createAt DateTime [default: `now()`, not null]
  updateAt DateTime
  roleId String
  verificationCode String
  verificationCodeExpiresAt DateTime
  isVerified Boolean [not null, default: false]
  role roles
  failedLoginAttempts Int [not null, default: 0]
  lockedUntil DateTime
  resetToken String
  resetTokenExpiresAt DateTime
  sentMessages messages [not null]
  receivedMessages messages [not null]
  refreshTokens refresh_tokens [not null]
}

Table refresh_tokens {
  id String [pk]
  tokenHash String [unique, not null]
  userId String [not null]
  user users [not null]
  expiresAt DateTime [not null]
  revoked Boolean [not null, default: false]
  createdAt DateTime [default: `now()`, not null]
}

Table roles {
  id String [pk]
  name String [unique, not null]
  users users [not null]
}

Table messages {
  id String [pk]
  content String [not null]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  senderId String [not null]
  sender users [not null]
  receiverId String [not null]
  receiver users [not null]
  isRead Boolean [not null, default: false]
  readAt DateTime
}

Ref: users.roleId > roles.id

Ref: refresh_tokens.userId > users.id [delete: Cascade]

Ref: messages.senderId > users.id

Ref: messages.receiverId > users.id